??/??/11 orbeckst, dcaplan
        * 0.7.2 development
	* NOTE: minimum Python version required is 2.5 (since 0.6.3)
	* installation: removed dependency on Cython; developer should
	  use setup_developer.py instead of setup.py (Issue 66)	  
	* loading from a PDB sets segid to the chain id if it exists
	* PrimitivePDBWriter uses first letter of segid as PDB chain id
        * Support for PDBs with 4 character resnames and segID output when
	  writing (Issue 63) --- makes the (default) PrimitivePDBReader/Writer
	  more suitable for NAMD/CHARMM but breaks strict PDB standard. If
	  you need full PDB reading capabilities, use the strict PDB reader.
	* fixed bug in (experimental) phi and psi selections
	* aliased segment.name to segment.id
	* fixed bugs in reading of unit cells (Issue 60, Issue 61, Issue 34)
	* universe.trajectory.delta returns the full precision dt value
	  (Issue 64)
        * new method AtomGroup.bbox() that returns the orthorhombic bounding box
	* enhancements of the analysis.density module (build density from B-factors) 
	* doc improvements 

02/08/11 orbeckst, denniej0, jandom, tyler.je.reddy, Joshua Adelman
        * 0.7.1 release
        * online documentation
        * AMBER topology and trj capabilities (netcdf not yet available)
        * PQR file reading support
        * new analysis.contacts.ContactAnalysis1 class that supports a
	  native contact analysis between arbitrary groups     
        * new examples (e.g. peptide helix clustering in a membrane)
	* fixed Issue 58 (align.rms_fit_trj; fix reported by Joshua
  	  Adelman)
	* new analysis module 'density': creation and analysis of volume data
        * fast RMSD aligner based on Douglas Theobald's QCP method for
	  calculating the minimum RMSD between two structures and
	  determining the optimal least-squares rotation matrix;
	  replaces the slower previous code (implemented by Joshua Adelman from
	  his pyqcprot package https://github.com/synapticarbors/pyqcprot);