@@ -16,6 +16,8 @@ The rules for this file:
 	  use setup_developer.py instead of setup.py (Issue 66)	  
 	* loading from a PDB sets segid to the chain id if it exists
 	* PrimitivePDBWriter uses first letter of segid as PDB chain id
+	* Fixed a problem with the strict PDBReader: raised exception when the
+	  pdb did not contain a segid
         * Support for PDBs with 4 character resnames and segID output when
 	  writing (Issue 63) --- makes the (default) PrimitivePDBReader/Writer
 	  more suitable for NAMD/CHARMM but breaks strict PDB standard. If
@@ -26,7 +28,11 @@ The rules for this file:
 	* universe.trajectory.delta returns the full precision dt value
 	  (Issue 64)
         * new method AtomGroup.bbox() that returns the orthorhombic bounding box
-	* enhancements of the analysis.density module (build density from B-factors) 
+	* enhancements of the analysis.density module (build density
+	  from B-factors) 
+	* PQR radius is now an attribute of Atom; AtomGroup.radii() returns the
+	  radii as a NumPy array; internally B-factor has also become an
+	  attribute of each Atom. 
 	* doc improvements 
 
 02/08/11 orbeckst, denniej0, jandom, tyler.je.reddy, Joshua Adelman
